Add links to documentation website.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -13,6 +13,7 @@
 		<h1>audioMotion-analyzer fluid layout demo</h1>
 		<ul class="header-nav">
 			<li><a href="multi.html">Multi-instance demo</a></li>
+            <li><a href="https://audiomotion.dev">Docs</a></li>
 			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo.js">View on GitHub</a></li>
 		</ul>
 	</header>
