--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>audioMotion-analyzer demos</h1>
         <ul class="header-nav">
+            <li><a href="https://audiomotion.dev">Documentation</a></li>
             <li><a href="https://github.com/hvianna/audioMotion-analyzer/tree/master/src/">View on GitHub</a></li>
         </ul>
     </header>
