--- a/demo/multi.html
+++ b/demo/multi.html
@@ -13,6 +13,7 @@
 		<h1>audioMotion-analyzer multi-instance demo</h1>
 		<ul class="header-nav">
 			<li><a href="fluid.html">Fluid layout demo</a></li>
+            <li><a href="https://audiomotion.dev">Docs</a></li>
 			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo-multi.js">View on GitHub</a></li>
 		</ul>
 	</header>
