--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>audiomotion-analyzer - High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.</title>
+  <title>audioMotion-analyzer</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.">
+  <meta name="description" content="High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta property="og:url" content="https://audiomotion.dev">
+  <meta property="og:title" content="audioMotion-analyzer">
+  <meta property="og:image" content="https://audiomotion.dev/cover.png">
+  <meta property="og:site_name" content="audioMotion-analyzer">
+  <meta property="og:description" content="High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@HenriqueVianna">
   <!-- docsify-themeable -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
   <style>
