New dark theme for the documentation cover and demo pages.

--- a/demo/multi.html
+++ b/demo/multi.html
@@ -4,19 +4,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>audioMotion-analyzer multi-instance demo</title>
-	<link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
 	<header>
-		<h1>audioMotion-analyzer multi-instance demo</h1>
+		<h1><a href="https://audiomotion.dev" class="logo">audioMotion-analyzer</a> | multi-instance demo</h1>
 		<ul class="header-nav">
 			<li><a href="fluid.html">Fluid layout demo</a></li>
-            <li><a href="https://audiomotion.dev">Docs</a></li>
+            <li><a href="https://audiomotion.dev">Home</a></li>
 			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo-multi.js">View on GitHub</a></li>
 		</ul>
 	</header>
+
+	<p>&nbsp;</p>
 
 	<div id="analyzer-block">
 		<div class="main">
