--- a/demo/multi.html
+++ b/demo/multi.html
@@ -12,7 +12,7 @@
 	<header>
 		<h1><a href="https://audiomotion.dev" class="logo">audioMotion-analyzer</a> | multi-instance demo</h1>
 		<ul class="header-nav">
-			<li><a href="fluid.html">Fluid layout demo</a></li>
+			<li><a href="index.html">Demos</a></li>
             <li><a href="https://audiomotion.dev">Home</a></li>
 			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo-multi.js">View on GitHub</a></li>
 		</ul>
@@ -145,7 +145,7 @@
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
-	<script src="demo-multi.js"></script>
+	<script src="multi.js"></script>
 
 </body>
 </html>
