--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,9 @@
 
     <h2><a href="multi.html">▶ Multiple instances demo</a></h2>
 
-    <p>This demo shows three analyzer instances that share the same audio context, each with its own configuration and visualization options.</p>
+    <ul>
+        <li>Demonstrates three analyzer instances sharing the same audio context, but each with its own configuration settings.</li>
+    </ul>
 
     <h2><a href="overlay.html">▶ Overlay demo</a></h2>
 
