--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -93,6 +93,11 @@
 				<div class="value"></div>
 			</label>
 
+			<label class="label">bgAlpha
+				<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
+				<div class="value"></div>
+			</label>
+
 		</div>
 
 		<div class="box center">
