--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			--cover-color: #ccc;
 			--cover-button-color: hsl( var(--theme-hue), var(--theme-saturation), 80% );
 			--cover-button-border: 1px solid var(--cover-button-color);
+			--emoji-size: 1.2em;
 			--sidebar-name-font-family: Orbitron, var(--base-font-family);
 			--sidebar-name-font-weight: 900;
 		}
