--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -92,6 +92,11 @@
 				<div class="value"></div>
 			</label>
 
+			<label class="label">reflexBright
+				<input type="range" id="reflex_bright" min="0" max="2" step=".1" data-setting="reflexBright">
+				<div class="value"></div>
+			</label>
+
 			<label class="label">bgAlpha
 				<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
 				<div class="value"></div>
