--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -109,6 +109,7 @@
 			<button id="btn_peaks" data-prop="showPeaks">showPeaks</button>
 			<button id="btn_leds" data-prop="showLeds">showLeds</button>
 			<button id="btn_lumi" data-prop="lumiBars">lumiBars</button>
+			<button id="btn_radial" data-prop="radial">radial</button>
 			<button id="btn_reflex" data-prop="reflexFit">reflexFit</button>
 			<button id="btn_scale" data-prop="showScale">showScale</button>
 			<button id="btn_lores" data-prop="loRes">loRes</button>
