Add rotate property for radial mode.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -120,6 +120,11 @@
 				<input type="range" id="smoothing" min="0" max=".9" step=".1" data-setting="smoothing">
 				<div class="value"></div>
 			</label>
+
+			<label class="label">rotate
+				<input type="range" id="rotate" min="-3" max="3" step="1" data-setting="rotate">
+				<div class="value"></div>
+			</label>
 		</div>
 
 		<div class="box center">
