Rename rotate property to spinSpeed and add spinOnBeat.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -121,8 +121,8 @@
 				<div class="value"></div>
 			</label>
 
-			<label class="label">rotate
-				<input type="range" id="rotate" min="-3" max="3" step="1" data-setting="rotate">
+			<label class="label">spinSpeed
+				<input type="range" id="spinspeed" min="-3" max="3" step="1" data-setting="spinSpeed">
 				<div class="value"></div>
 			</label>
 		</div>
@@ -134,6 +134,7 @@
 			<button id="btn_lumi" data-prop="lumiBars">lumiBars</button>
 			<button id="btn_radial" data-prop="radial">radial</button>
 			<button id="btn_reflex" data-prop="reflexFit">reflexFit</button>
+			<button id="btn_spinonbeat" data-prop="spinOnBeat">spinOnBeat</button>
 			<button id="btn_scale" data-prop="showScale">showScale</button>
 			<button id="btn_lores" data-prop="loRes">loRes</button>
 			<button id="btn_fps" data-prop="showFPS">showFPS</button>
