Add option to spin on song energy; rename spinOnBeat to spinMode.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -125,6 +125,14 @@
 				<input type="range" id="spinspeed" min="-3" max="3" step="1" data-setting="spinSpeed">
 				<div class="value"></div>
 			</label>
+
+			<label class="label">spinMode
+				<select id="range" data-setting="spinMode">
+					<option value="beat">Beat</option>
+					<option value="">Constant</option>
+					<option value="energy">Energy</option>
+				</select>
+			</label>
 		</div>
 
 		<div class="box center">
@@ -134,7 +142,6 @@
 			<button id="btn_lumi" data-prop="lumiBars">lumiBars</button>
 			<button id="btn_radial" data-prop="radial">radial</button>
 			<button id="btn_reflex" data-prop="reflexFit">reflexFit</button>
-			<button id="btn_spinonbeat" data-prop="spinOnBeat">spinOnBeat</button>
 			<button id="btn_scale" data-prop="showScale">showScale</button>
 			<button id="btn_lores" data-prop="loRes">loRes</button>
 			<button id="btn_fps" data-prop="showFPS">showFPS</button>
