Improve table styling for documentation site.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 		.markdown-section h3 ~ h3 {
 			margin-top: 0;
 		}
+
+		p ~ .table-wrapper table {
+			margin-top: 0;
+		}
 	</style>
 </head>
 <body>
