--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -14,7 +14,7 @@
 		<ul class="header-nav">
 			<li><a href="index.html">Demos</a></li>
             <li><a href="https://audiomotion.dev">Home</a></li>
-			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo.js">View on GitHub</a></li>
+			<li><a href="https://github.com/hvianna/audioMotion-analyzer/tree/master/demo/src/overlay.js">View on GitHub</a></li>
 		</ul>
 	</header>
 
@@ -22,7 +22,10 @@
 		<video id="video" src="night-mist.mp4" controls></video>
 	</div>
 
-	<p>&nbsp;</p>
+	<div class="box center">
+		<button data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
+		<button id="btn_fullscr">Fullscreen</button>
+	</div>
 
 	<div class="analyzer-configuration">
 		<div class="box center">
@@ -30,22 +33,47 @@
 				<select id="presets"></select>
 			</label>
 
-			<label class="label">Visualization Mode
-				<select id="mode" data-setting="mode">
-					<option value="0">Discrete frequencies</option>
-					<option value="10">Line / Area graph</option>
-					<option value="1">1/24th octave bands</option>
-					<option value="2">1/12th octave bands</option>
-					<option value="3">1/8th octave bands</option>
-					<option value="4">1/6th octave bands</option>
-					<option value="5">1/4th octave bands</option>
-					<option value="6">1/3rd octave bands</option>
-					<option value="7">Half octave bands</option>
-					<option value="8">Full octave bands</option>
+			<label class="label">mode
+				<select data-setting="mode">
+					<option value="0">0 - Discrete frequencies</option>
+					<option value="1">1 - 1/24th octave bands</option>
+					<option value="2">2 - 1/12th octave bands</option>
+					<option value="3">3 - 1/8th octave bands</option>
+					<option value="4">4 - 1/6th octave bands</option>
+					<option value="5">5 - 1/4th octave bands</option>
+					<option value="6">6 - 1/3rd octave bands</option>
+					<option value="7">7 - Half octave bands</option>
+					<option value="8">8 - Full octave bands</option>
+					<option value="10">10 - Line / Area graph</option>
 				</select>
 			</label>
 
-			<fieldset id="area_options">
+			<label class="label">gradient
+				<select data-setting="gradient">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+				</select>
+			</label>
+		</div>
+
+		<div class="box center">
+			<fieldset>
+				<legend>modes 1-8 only</legend>
+				<label class="label">barSpace
+					<select data-setting="barSpace">
+						<option value="0">0</option>
+						<option value="0.1">0.1</option>
+						<option value="0.25">0.25</option>
+						<option value="0.5">0.5</option>
+						<option value="0.75">0.75</option>
+						<option value="1">1 (legacy)</option>
+					</select>
+				</label>
+			</fieldset>
+
+			<fieldset>
+				<legend>mode 10 only</legend>
 				<label class="label">lineWidth
 					<input type="range" id="line_width" min="0" max="9" step="1" data-setting="lineWidth">
 					<div class="value"></div>
@@ -57,66 +85,50 @@
 				</label>
 			</fieldset>
 
-			<fieldset id="bar_options">
-				<label class="label">Bar spacing
-					<select id="bar_space" data-setting="barSpace">
-						<option value="0">None</option>
-						<option value="1">1px (legacy)</option>
-						<option value="2">2px</option>
-						<option value="0.1">10% (default)</option>
-						<option value="0.2">20%</option>
-						<option value="0.25">25%</option>
-						<option value="0.4">40%</option>
-						<option value="0.5">50%</option>
-						<option value="0.75">75%</option>
-						<option value="0.9">90%</option>
-					</select>
+			<fieldset>
+				<legend>Radial effect</legend>
+				<button data-prop="radial">radial</button>
+
+				<label class="label">spinSpeed
+					<input type="range" min="-5" max="5" step="1" data-setting="spinSpeed">
+					<div class="value"></div>
 				</label>
 			</fieldset>
 
-			<label class="label">Gradient
-				<select id="gradient" data-setting="gradient">
-					<option value="classic">Classic</option>
-					<option value="prism">Prism</option>
-					<option value="rainbow">Rainbow</option>
-				</select>
-			</label>
+			<fieldset>
+				<legend>Reflex effect</legend>
+				<label class="label">reflexRatio
+					<input type="range" min="0" max=".9" step=".1" data-setting="reflexRatio">
+					<div class="value"></div>
+				</label>
 
-			<label class="label">reflexRatio
-				<input type="range" id="reflex_ratio" min="0" max=".9" step=".1" data-setting="reflexRatio">
-				<div class="value"></div>
-			</label>
+				<label class="label">reflexAlpha
+					<input type="range" min="0" max="1" step=".05" data-setting="reflexAlpha">
+					<div class="value"></div>
+				</label>
 
-			<label class="label">reflexAlpha
-				<input type="range" id="reflex_alpha" min="0" max="1" step=".05" data-setting="reflexAlpha">
-				<div class="value"></div>
-			</label>
+				<button data-prop="reflexFit">reflexFit</button>
+			</fieldset>
 
-			<label class="label">reflexBright
-				<input type="range" id="reflex_bright" min="0" max="2" step=".1" data-setting="reflexBright">
-				<div class="value"></div>
-			</label>
-
-			<label class="label">bgAlpha
-				<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
-				<div class="value"></div>
-			</label>
-
+			<fieldset>
+				<legend>Overlay mode</legend>
+				<button data-prop="overlay">overlay</button>
+				<label class="label">bgAlpha
+					<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
+					<div class="value"></div>
+				</label>
+			</fieldset>
 		</div>
 
 		<div class="box center">
-			<button id="btn_bgcolor" data-prop="showBgColor">showBgColor</button>
-			<button id="btn_peaks" data-prop="showPeaks">showPeaks</button>
-			<button id="btn_leds" data-prop="showLeds">showLeds</button>
-			<button id="btn_lumi" data-prop="lumiBars">lumiBars</button>
-			<button id="btn_radial" data-prop="radial">radial</button>
-			<button id="btn_reflex" data-prop="reflexFit">reflexFit</button>
-			<button id="btn_scale" data-prop="showScale">showScale</button>
-			<button id="btn_lores" data-prop="loRes">loRes</button>
-			<button id="btn_fps" data-prop="showFPS">showFPS</button>
-			<button id="btn_logo" data-prop="overlay">overlay</button>
-			<button id="btn_freeze" data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
-			<button id="btn_fullscr">Fullscreen</button>
+			<button data-prop="showBgColor">showBgColor</button>
+			<button data-prop="showPeaks">showPeaks</button>
+			<button data-prop="showLeds">showLeds</button>
+			<button data-prop="lumiBars">lumiBars</button>
+			<button data-prop="showScale">showScale</button>
+			<button data-prop="showScaleY">showScaleY</button>
+			<button data-prop="loRes">loRes</button>
+			<button data-prop="showFPS">showFPS</button>
 		</div>
 	</div>
 
