Add reflexBright control to all demos.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -160,6 +160,11 @@
 					<div class="value"></div>
 				</label>
 
+				<label class="label">reflexBright
+					<input type="range" min="0" max="2" step=".1" data-setting="reflexBright">
+					<div class="value"></div>
+				</label>
+
 				<button data-prop="reflexFit">reflexFit</button>
 			</fieldset>
 
