Update demos descriptions.

--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>audioMotion-analyzer fluid layout demo</title>
+	<title>audioMotion-analyzer overlay demo</title>
 	<link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
