Add screenshot gallery on demos page; organize media files.

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,22 @@
 
     <p>&nbsp;</p>
 
-    <img src="fluid.png">
+    <div class="gallery">
+        <ul class="gallery-internal">
+            <li><img src="media/discrete.png" title="Discrete frequencies">
+            <li><img src="media/radial.png" title="Octave bands + Radial visualization">
+            <li><img src="media/area.png" title="Line / Area graph">
+            <li><img src="media/leds.png" title="Octave bands + LED effect">
+            <li><img src="media/lumibars.png" title="LumiBars effect">
+            <li><img src="media/reflex.png" title="Line / Area graph + Reflex effect">
+            <li><img src="media/discrete.png" title="Discrete frequencies">
+            <li><img src="media/radial.png" title="Octave bands + Radial visualization">
+            <li><img src="media/area.png" title="Line / Area graph">
+            <li><img src="media/leds.png" title="Octave bands + LED effect">
+            <li><img src="media/lumibars.png" title="LumiBars effect">
+            <li><img src="media/reflex.png" title="Line / Area graph + Reflex effect">
+        </ul>
+    </div>
 
     <p><strong>Note:</strong> demo scripts are bundled with webpack. The uncompressed source code is located in the <code>/demo/src</code> folder.</p>
 
