--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -19,7 +19,7 @@
 	</header>
 
 	<div id="container" class="overlay">
-		<video id="video" src="night-mist.mp4" controls></video>
+		<video id="video" src="media/night-mist.mp4" controls></video>
 	</div>
 
 	<p>&nbsp;</p>
