--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -189,6 +189,7 @@
 			<button data-prop="lumiBars">lumiBars</button>
 			<button data-prop="showScale">showScale</button>
 			<button data-prop="showScaleY">showScaleY</button>
+			<button data-prop="stereo">stereo</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="showFPS">showFPS</button>
 		</div>
