--- a/demo/index.html
+++ b/demo/index.html
@@ -37,6 +37,13 @@
 
     <p><strong>Note:</strong> demo scripts are bundled with webpack. The uncompressed source code is located in the <code>/demo/src</code> folder.</p>
 
+    <h2><a href="minimal.html">▶ Minimal demo</a></h2>
+
+    <ul>
+        <li>A self-contained HTML file with just the minimal code required to use audioMotion-analyzer;</li>
+        <li>Uses a live stream as audio source.</li>
+    </ul>
+
     <h2><a href="fluid.html">▶ Fluid layout demo</a></h2>
 
     <ul>
