--- a/demo/multi.html
+++ b/demo/multi.html
@@ -182,7 +182,12 @@
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
-	<script src="multi.js"></script>
+	<script src="multi.js" type="module"></script>
+
+	<script>
+		if ( location.href.startsWith('file://') )
+			alert('This demo must be loaded via HTTP to work properly. See the README file inside the demo folder for more information.');
+	</script>
 
 </body>
 </html>
