--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -190,7 +190,12 @@
 		Video: <a href="https://www.youtube.com/watch?v=Trh6syrA8qU">"Night Mist" by NuSan & Valden</a>
 	</div>
 
-	<script src="overlay.js"></script>
+	<script src="overlay.js" type="module"></script>
+
+	<script>
+		if ( location.href.startsWith('file://') )
+			alert('This demo must be loaded via HTTP to work properly. See the README file inside the demo folder for more information.');
+	</script>
 
 </body>
 </html>
