Improve some messages.

--- a/demo/index.html
+++ b/demo/index.html
@@ -35,12 +35,12 @@
         </ul>
     </div>
 
-    <p><strong>Note:</strong> these demos must be loaded via HTTP to work properly. See the README file inside the demo folder for more information.</p>
+    <p><strong>Note:</strong> these demos won't work if loaded via <code>file://</code> protocol. See the README file inside the <code>demo/</code> folder for more information.</p>
 
     <h2><a href="minimal.html">▶ Minimal demo</a></h2>
 
     <ul>
-        <li>A single HTML file with just the minimal code required to use audioMotion-analyzer;</li>
+        <li>Minimal code required to use audioMotion-analyzer (script included in the HTML file);</li>
         <li>Uses a live stream as audio source.</li>
     </ul>
 
