--- a/demo/minimal.html
+++ b/demo/minimal.html
@@ -27,7 +27,7 @@
 
 	<div class="credits">
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
-		Radio stream: <a href="https://wp.ufpel.edu.br/federalfm">Federal FM</a>.
+		Live stream: <a href="https://wp.ufpel.edu.br/federalfm">Rádio Federal FM</a>.
 	</div>
 
 	<script type="module">
@@ -38,7 +38,7 @@
 				document.getElementById('container'),
 				{
 					source: document.getElementById('audio'),
-					// you can set your preferred options here
+					// set your preferred options here
 				}
 			);
 		}
@@ -63,7 +63,7 @@
 
 	<script>
 		if ( location.href.startsWith('file://') )
-			alert('This demo must be loaded via HTTP to work properly. See the README file inside the demo folder for more information.');
+			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
 	</script>
 
 </body>
