--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -194,7 +194,7 @@
 
 	<script>
 		if ( location.href.startsWith('file://') )
-			alert('This demo must be loaded via HTTP to work properly. See the README file inside the demo folder for more information.');
+			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
 	</script>
 
 </body>
