--- a/demo/minimal.html
+++ b/demo/minimal.html
@@ -27,7 +27,7 @@
 
 	<div class="credits">
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
-		Live stream: <a href="https://wp.ufpel.edu.br/federalfm">Rádio Federal FM</a>.
+		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
 	</div>
 
 	<script type="module">
