--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			name: 'audioMotion-analyzer',
 			repo: 'https://github.com/hvianna/audioMotion-analyzer',
 			auto2top: true,
+			noCompileLinks: ['/demo/.*'],
 			coverpage: 'coverpage.md'
 		}
 	</script>
