--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -178,6 +178,7 @@
 			<button data-prop="lumiBars">lumiBars</button>
 			<button data-prop="showScale">showScale</button>
 			<button data-prop="showScaleY">showScaleY</button>
+			<button data-prop="stereo">stereo</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="showFPS">showFPS</button>
 			<button data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
