--- a/demo/multi.html
+++ b/demo/multi.html
@@ -172,6 +172,7 @@
 			<button data-prop="radial">radial</button>
 			<button data-prop="showScale">showScale</button>
 			<button data-prop="showScaleY">showScaleY</button>
+			<button data-prop="stereo">stereo</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="showFPS">showFPS</button>
 		</div>
