Add stereo panner to fluid demo's test tones.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -234,6 +234,11 @@
 					<input id="frequency" type="text">
 				</label>
 
+				<label class="label">L - Pan - R
+					<input id="pan" type="range" min="-1" max="1" step=".2">
+					<div class="value"></div>
+				</label>
+
 				<button id="btn_play">Play</button>
 				<button id="btn_soundoff">STOP</button>
 			</fieldset>
