Add splitGradient property.

--- a/demo/multi.html
+++ b/demo/multi.html
@@ -173,6 +173,7 @@
 			<button data-prop="showScale">showScale</button>
 			<button data-prop="showScaleY">showScaleY</button>
 			<button data-prop="stereo">stereo</button>
+			<button data-prop="splitGradient">splitGradient</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="showFPS">showFPS</button>
 		</div>
