--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -22,7 +22,10 @@
 		<video id="video" src="media/night-mist.mp4" controls></video>
 	</div>
 
-	<p>&nbsp;</p>
+	<p class="center">
+		<button data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
+		<button id="btn_fullscr">Fullscreen</button>
+	</p>
 
 	<div class="analyzer-configuration">
 		<div class="box center">
@@ -179,10 +182,9 @@
 			<button data-prop="showScale">showScale</button>
 			<button data-prop="showScaleY">showScaleY</button>
 			<button data-prop="stereo">stereo</button>
+			<button data-prop="splitGradient">splitGradient</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="showFPS">showFPS</button>
-			<button data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
-			<button id="btn_fullscr">Fullscreen</button>
 		</div>
 	</div>
 
