--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -258,12 +258,7 @@
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
-	<script src="fluid.js" type="module"></script>
-
-	<script>
-		if ( location.href.startsWith('file://') )
-			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
-	</script>
-
+	<script src="../dist/audioMotion-analyzer.min.js"></script>
+	<script src="fluid.js"></script>
 </body>
 </html>
