--- a/demo/minimal.html
+++ b/demo/minimal.html
@@ -30,9 +30,8 @@
 		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
 	</div>
 
-	<script type="module">
-		import AudioMotionAnalyzer from '../src/audioMotion-analyzer.js';
-
+	<script src="../dist/audioMotion-analyzer.min.js"></script>
+	<script>
 		// Display package version in the footer
 		document.getElementById('version').innerText = AudioMotionAnalyzer.version;
 
@@ -60,11 +59,5 @@
 			document.getElementById('btn_fullscreen').addEventListener( 'click', () => audioMotion.toggleFullscreen() );
 		}
 	</script>
-
-	<script>
-		if ( location.href.startsWith('file://') )
-			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
-	</script>
-
 </body>
 </html>
