--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -197,12 +197,11 @@
 		Video: <a href="https://www.youtube.com/watch?v=Trh6syrA8qU">"Night Mist" by NuSan & Valden</a>
 	</div>
 
-	<script src="../dist/audioMotion-analyzer.min.js"></script>
-	<script src="overlay.js"></script>
+	<script src="overlay.js" type="module"></script>
 
 	<script>
 		if ( location.href.startsWith('file://') )
-			alert("This demo won't work when loaded via file:// protocol.\nSee the note in the demos index page for more information.");
+			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
 	</script>
 
 </body>
