--- a/demo/multi.html
+++ b/demo/multi.html
@@ -189,8 +189,12 @@
 		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
-	<script src="../dist/audioMotion-analyzer.min.js"></script>
-	<script src="multi.js"></script>
+	<script src="multi.js" type="module"></script>
+
+	<script>
+		if ( location.href.startsWith('file://') )
+			alert("This demo won't work when loaded via file:// protocol.\nSee the README file inside the demo folder for more information.");
+	</script>
 
 </body>
 </html>
