--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>audioMotion-analyzer</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="description" content="High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies">
+	<meta name="description" content="High-resolution real-time audio spectrum analyzer JavaScript module with no dependencies">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta property="og:url" content="https://audiomotion.dev">
 	<meta property="og:title" content="audioMotion-analyzer">
 	<meta property="og:image" content="https://audiomotion.dev/cover.png">
 	<meta property="og:site_name" content="audioMotion-analyzer">
-	<meta property="og:description" content="High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies">
+	<meta property="og:description" content="High-resolution real-time audio spectrum analyzer JavaScript module with no dependencies">
 	<meta property="og:type" content="website">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@HenriqueVianna">
