Update "fluid" demo with bass, midrange and treble energy meters.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -204,7 +204,7 @@
 			<fieldset>
 				<legend>Features added via callback</legend>
 				<button data-feature="showLogo">Logo</button>
-				<button data-feature="energyMeter">Energy meter</button>
+				<button data-feature="energyMeter">Energy meters</button>
 				<button data-feature="songProgress">Progress bar</button>
 			</fieldset>
 
