--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -188,16 +188,36 @@
 		</div>
 
 		<div class="box center">
-			<button data-prop="showBgColor">showBgColor</button>
-			<button data-prop="showPeaks">showPeaks</button>
-			<button data-prop="showLeds">showLeds</button>
-			<button data-prop="lumiBars">lumiBars</button>
-			<button data-prop="showScaleX">showScaleX</button>
-			<button data-prop="showScaleY">showScaleY</button>
-			<button data-prop="stereo">stereo</button>
-			<button data-prop="splitGradient">splitGradient</button>
-			<button data-prop="loRes">loRes</button>
-			<button data-prop="showFPS">showFPS</button>
+			<fieldset>
+				<legend>Switches</legend>
+				<button data-prop="loRes">loRes</button>
+				<button data-prop="lumiBars">lumiBars</button>
+				<button data-prop="showBgColor">showBgColor</button>
+				<button data-prop="showFPS">showFPS</button>
+				<button data-prop="showLeds">showLeds</button>
+				<button data-prop="showPeaks">showPeaks</button>
+				<br>
+				<button data-prop="showScaleX">showScaleX</button>
+				<button data-prop="showScaleY">showScaleY</button>
+				<button data-prop="splitGradient">splitGradient</button>
+				<button data-prop="stereo">stereo</button>
+			</fieldset>
+
+			<fieldset>
+				<legend>Custom LED parameters</legend>
+				<label class="label">set
+					<input id="customLeds" type="checkbox" data-custom="ledParams">
+				</label>
+				<label class="label">maxLeds
+					<input id="maxLeds" type="number" min="1" max="256" value="128" data-custom="ledParams">
+				</label>
+				<label class="label">spaceVRatio
+					<input id="spaceVRatio" type="number" min=".05" max="20" step=".05" value="4" data-custom="ledParams">
+				</label>
+				<label class="label">spaceHRatio
+					<input id="spaceHRatio" type="number" min="0" max="1" step=".05" value=".8" data-custom="ledParams">
+				</label>
+			</fieldset>
 		</div>
 
 		<div class="box center">
