More code optimizations and cleanup.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -211,11 +211,11 @@
 				<label class="label">maxLeds
 					<input id="maxLeds" type="number" min="1" max="256" value="128" data-custom="ledParams">
 				</label>
-				<label class="label">spaceVRatio
-					<input id="spaceVRatio" type="number" min=".05" max="20" step=".05" value="4" data-custom="ledParams">
+				<label class="label">spaceV
+					<input id="spaceV" type="number" min=".05" max="20" step=".05" value="4" data-custom="ledParams">
 				</label>
-				<label class="label">spaceHRatio
-					<input id="spaceHRatio" type="number" min="0" max="1" step=".05" value=".8" data-custom="ledParams">
+				<label class="label">spaceH
+					<input id="spaceH" type="number" min="0" max="1" step=".05" value=".8" data-custom="ledParams">
 				</label>
 			</fieldset>
 		</div>
