--- a/demo/multi.html
+++ b/demo/multi.html
@@ -149,7 +149,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Reflex effect</legend>
+				<legend>Reflex & Mirror</legend>
 				<label class="label">reflexRatio
 					<input type="range" min="0" max=".9" step=".1" data-setting="reflexRatio">
 					<div class="value"></div>
@@ -166,6 +166,11 @@
 				</label>
 
 				<button data-prop="reflexFit">reflexFit</button>
+
+				<label class="label">mirror
+					<input type="range" min="-1" max="1" step="1" data-setting="mirror">
+					<div class="value"></div>
+				</label>
 			</fieldset>
 		</div>
 
