--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -8,7 +8,7 @@
 	<link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="wide">
 	<header>
 		<h1><a href="https://audiomotion.dev" class="logo">audioMotion-analyzer</a> | overlay demo</h1>
 		<ul class="header-nav">
@@ -149,7 +149,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Reflex effect</legend>
+				<legend>Reflex & Mirror</legend>
 				<label class="label">reflexRatio
 					<input type="range" min="0" max=".9" step=".1" data-setting="reflexRatio">
 					<div class="value"></div>
@@ -166,6 +166,11 @@
 				</label>
 
 				<button data-prop="reflexFit">reflexFit</button>
+
+				<label class="label">mirror
+					<input type="range" min="-1" max="1" step="1" data-setting="mirror">
+					<div class="value"></div>
+				</label>
 			</fieldset>
 
 			<fieldset>
