--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -24,7 +24,7 @@
 
 	<p class="center">
 		<button data-prop="isOn" data-func="toggleAnalyzer">toggleAnalyzer()</button>
-		<button id="btn_fullscr">Fullscreen</button>
+		<button data-prop="isFullscreen" data-func="toggleFullscreen">Fullscreen</button>
 	</p>
 
 	<div class="analyzer-configuration">
