Update demo description.

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,8 @@
     <h2><a href="overlay.html">▶ Overlay demo</a></h2>
 
     <ul>
-        <li>Displays the analyzer over a video element and illustrates how to handle fullscreen on the container element.</li>
+        <li><em>audioMotion-analyzer</em> is connected to a <code>&lt;video&gt;</code> element and displayed over it with semi-transparent background;
+        <li>Fullscreen is handled on the parent container element.</li>
     </ul>
 
 </body>
