--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			--emoji-size: 1.2em;
 			--sidebar-name-font-family: Orbitron, var(--base-font-family);
 			--sidebar-name-font-weight: 800;
+			--heading-h4-font-size: 1.2rem;
 		}
 
 		@media (min-width: 1200px) {
