--- a/index.html
+++ b/index.html
@@ -82,10 +82,14 @@
 			repo: 'https://github.com/hvianna/audioMotion-analyzer',
 			auto2top: true,
 			noCompileLinks: ['/demo/.*'],
-			coverpage: 'coverpage.md'
+			coverpage: 'coverpage.md',
+			search: {
+				depth: 3,
+			}
 		}
 	</script>
 	<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 	<!-- docsify-themeable -->
 	<script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
 </body>
